2004-12-04  Danilo Šegan  <dsegan@gmx.net>

	* translation-status.xml: Move gnome-doc-utils to
	gnome-2.10/desktop (dependency of Yelp).

2004-12-04  Danilo Šegan  <dsegan@gmx.net>

	* translation-status.xml: Move gnome-menus to gnome-2.10/desktop.

2004-12-01  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added f-spot to extras.

2004-12-01  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gconf and gnome-netstatus
	have been branched.

2004-11-17  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: atk has been branched.

2004-11-16  Danilo Šegan  <dsegan@gmx.net>

	* translation-status.xml: Change gtkhtml 2.10 POT filename.

2004-11-15  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gnome-backgrounds to extras.

2004-11-15  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gok has been branched.

2004-11-14  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: bug-buddy has been branched.

2004-11-13  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: procman has been branched.

2004-11-10  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: libgnome, libgnomecanvas,
	libgnomeui, and libgtop have all been branched.

2004-11-09  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gnome-menus to extras,
	and vino and gnome-session have been branched.

2004-11-07  Carlos Perelló Marín <carlos@gnome.org>

	* translation-status.xml: Added nautilus-sendto to the extra section.

2004-11-05  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed evolution-data-server pot file
	name.

2004-11-03  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-terminal has been branched.

2004-10-29  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: eel, gnome-vfs, and nautilus have
	all been branched.

2004-10-28  Christian Rose  <menthos@menthos.com>
