@@ -1735,6 +1735,17 @@
       </component>
     </version>
   </module>
+  <module name="goobox">
+    <version release="HEAD">
+      <component name="goobox" dir="goobox" group="extras">
+        <podir dir="po"/>
+        <potname name="goobox.pot"/>
+        <branch name="HEAD"/>
+        <regenerate/>
+        <download/>
+      </component>
+    </version>
+  </module>
   <module name="gossip">
     <version release="HEAD">
       <component name="gossip" dir="gossip" group="extras">
