@@ -1,5 +1,9 @@
 2004-12-04  Danilo Šegan  <dsegan@gmx.net>
 
+	* translation-status.xml: Added goobox to extras.
+
+2004-12-04  Danilo Šegan  <dsegan@gmx.net>
+
 	* translation-status.xml: Move gnome-doc-utils to
 	gnome-2.10/desktop (dependency of Yelp).
 
